--- a/scripts/alpha_diversity16S.Rmd
+++ b/scripts/alpha_diversity16S.Rmd
@@ -11,6 +11,7 @@ library(readxl)
 library(phyloseq)
 library(tidyverse)
 library(vegan)
+library(picante)
 library(glm2)
 library(gridExtra)
 library(gtable)
@@ -64,6 +65,8 @@ rownames(metadata_loc) <- formatC(as.numeric(rownames(metadata_loc)), width = 4,
 metadata_loc$richness <- specnumber(df_rarefied)
 metadata_loc$shannon <- diversity(df_rarefied, index = "shannon")
 metadata_loc$simpson <- diversity(df_rarefied, index = "simpson")
+faith <- pd(df_rarefied, tree = tree_rarefied2$data, include.root = TRUE)
+metadata_loc <- cbind(metadata_loc, faith)
 ```
 
 ##richness
@@ -74,7 +77,7 @@ p_rich <- ggplot(data = metadata_loc,
   geom_point(mapping = aes(color = site), size = 2) +
   theme_classic() + 
   xlim(c(30, 41)) + ylim(0, 300) +
-  scale_color_manual(values = c("orange3", "blue3")) +
+  scale_color_manual(values = c("blue3", "orange3")) +
   labs(x = "Latitude", y = "Richness", color = "Site") +
   theme(text = element_text(size = 10), 
         legend.position = "inside", 
@@ -86,7 +89,7 @@ p_shannon <- ggplot(data = metadata_loc,
   geom_point(mapping = aes(color = site), size = 2) +
   theme_classic() + 
   xlim(c(30, 41)) + #ylim(0, 300) +
-  scale_color_manual(values = c("orange3", "blue3")) +
+  scale_color_manual(values = c("blue3", "orange3")) +
   labs(x = "Latitude", 
        y = expression(paste("Shannon's ",  italic("H'"))), 
        color = "Site") +
@@ -97,9 +100,20 @@ p_simp <- ggplot(data = metadata_loc,
   geom_point(mapping = aes(color = site), size = 2) +
   theme_classic() + 
   xlim(c(30, 41)) + #ylim(0, 300) +
-  scale_color_manual(values = c("orange3", "blue3")) +
+  scale_color_manual(values = c("blue3", "orange3")) +
   labs(x = "Latitude", 
        y = expression(paste("Simpson's ",  italic("D"))), 
+       color = "Site") +
+  theme(text = element_text(size = 10))
+
+p_faith <- ggplot(data = metadata_loc, 
+                  mapping = aes(x = latitude, y = PD)) + 
+  geom_point(mapping = aes(color = site), size = 2) +
+  theme_classic() + 
+  xlim(c(30, 41)) + #ylim(0, 300) +
+  scale_color_manual(values = c("blue3", "orange3")) +
+  labs(x = "Latitude", 
+       y = "Faith's Phylogenetic Diversity", 
        color = "Site") +
   theme(text = element_text(size = 10))
 
@@ -110,8 +124,9 @@ legend <- gtable_filter(ggplotGrob(p_rich), "guide-box")
 p_div <- grid.arrange(p_rich + theme(legend.position = "none"), 
                       p_shannon + theme(legend.position = "none"), 
                       p_simp + theme(legend.position = "none"), 
+                      p_faith + theme(legend.position = "none"), 
                       legend, 
-                      nrow = 2, ncol = 2)
+                      nrow = 2, ncol = 3)
 
 ggsave(p_div, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/alpha_16S.png"), 
        dpi = 400, width = 150, height = 100, units = "mm")
@@ -150,5 +165,16 @@ summary(lm_simp)
 write.csv(cbind(summary(lm_simp)$coefficients, 
                 AIC = summary(lm_simp)$aic), 
           file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/simpson_glm_gamma.csv"))
+```
+
+```{r}
+lm_faith <- glm2(PD ~ site * latitude, 
+                 data = metadata_loc, 
+                 family = Gamma(link = "inverse"))
+summary(lm_faith)
+
+write.csv(cbind(summary(lm_faith)$coefficients, 
+                AIC = summary(lm_faith)$aic), 
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/faith_glm_gamma.csv"))
 ```
 
